--- a/front/styles.css
+++ b/front/styles.css
@@ -7,27 +7,74 @@ html,body {
 .main {
     width:100%;
 }
+
 .poll {
-    height:100%;
-    width:20%;
-    display:inline-block;
+    margin:auto;
+    height:40%;
+    width:40%;
+    display:block;
+    background-color: #f5e9ff;
 }
 .title {
-     height: 10%;
-     width:100%;
-     display:block;
+    margin:0;
+    height:10%;
+    width:100%;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    background-color:#ede4ff;  
 }
 
 .optionsDiv {
-     height:90%;
-     width: 100%;
-     border: solid 5px black;
-     display:block;
+    height:90%;
+    width: 100%;
+    display: flex;
+    align-items:center;
 }
-
 .pieDiv {
     position:relative;
-    height: 100%;
-    width:80%;
-    display: inline-block;
+    height:60%;
+    width:40%;
+    display: block;
+    background-color: #f5e9ff;
+    margin:auto;
+    margin-bottom:1.5%;
 }
+
+h1 {
+    width:90%;
+    margin:0;
+}
+
+.optionsButton {
+    background-color: 	#f5e9ff;
+    border: none;
+    outline:none;
+    width:50%;
+    display:block;
+    margin: auto;
+    height:100%;
+}
+
+button:focus {
+    outline:none;
+}
+
+.optionsButton:hover {
+  background-color: #ecc3ff ;
+}
+
+.deleteButton {
+    background-color: #ede4ff;
+    border: none;
+}
+
+.deleteButton:hover {
+  background-color: #ecc3ff ;
+}
+
+h1:hover {
+    background-color: #ecc3ff
+}
+
+
