--- a/front/styles.css
+++ b/front/styles.css
@@ -5,19 +5,19 @@ html,body {
 }
 
 .main {
+    margin-top:1.5%;
     width:100%;
 }
 
 .poll {
     margin:auto;
-    height:40%;
+    height: 100%;
     width:40%;
     display:block;
-    background-color: #f5e9ff;
 }
 .title {
     margin:0;
-    height:10%;
+    height:20%;
     width:100%;
     display:flex;
     flex-direction: row;
@@ -26,52 +26,48 @@ html,body {
 }
 
 .optionsDiv {
-    height:90%;
-    width: 100%;
-    display: flex;
-    align-items:center;
-}
-.pieDiv {
-    position:relative;
-    height:60%;
-    width:40%;
-    display: block;
+    height:80%;
+    width:30%;
+    float:left;
     background-color: #f5e9ff;
-    margin:auto;
-    margin-bottom:1.5%;
+}
+
+.pieDiv {
+    height:80%;
+    display:flex;
+    align-items:center;
+    position: relative;
+    background-color: #f5e9ff;
+}
+
+.flexWrapper {
+    height:100%;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+}
+
+.chartStyle {
+    height:20%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    background-color: #f5e9ff;
 }
 
 h1 {
     width:90%;
     margin:0;
+    text-align: center;
 }
 
 .optionsButton {
-    background-color: 	#f5e9ff;
-    border: none;
-    outline:none;
-    width:50%;
     display:block;
-    margin: auto;
-    height:100%;
+    height:15%;
+    width:80%;
 }
 
-button:focus {
-    outline:none;
-}
-
-.optionsButton:hover {
-  background-color: #ecc3ff ;
-}
-
-.deleteButton {
-    background-color: #ede4ff;
-    border: none;
-}
-
-.deleteButton:hover {
-  background-color: #ecc3ff ;
-}
 
 h1:hover {
     background-color: #ecc3ff
@@ -114,4 +110,28 @@ input {
     display:flex;
     flex-direction:column;
     justify-content:center;
+}
+
+button {
+    background-color: 	#f5e9ff;
+    border-color:#ecc3ff;
+    outline:none;
+}
+
+button:hover{
+  background-color: #ecc3ff ;
+}
+
+button:focus {
+    outline:none;
+}
+
+
+@media screen and (max-width:480px) {
+
+}
+
+
+@media screen and (min-width:480) and (max-width:800) {
+ 
 }
