--- a/front/styles.css
+++ b/front/styles.css
@@ -1,9 +1,47 @@
+/* html elements */
+
 html,body {
     height:100%;
     width:100%;
     margin: 0;
 }
 
+h1 {
+    margin:0;
+    text-align: center;
+}
+
+p {
+    width: 10%;
+    text-align: center;
+    margin: 0;
+}
+
+input {
+    display:block;
+    margin:auto;
+}
+
+button {
+    background-color: 	#f5e9ff;
+    border-color:#ecc3ff;
+    outline:none;
+}
+
+button:hover{
+  background-color: #ecc3ff ;
+}
+
+button:focus {
+    outline:none;
+}
+
+canvas {
+    width: 450px;
+    height: 225px;
+}
+
+/* main elements of page */
 .main {
     width:100%;
     margin-top: 1.5%;
@@ -15,6 +53,8 @@ html,body {
     width:40%;
     display:block;
 }
+
+/* elements below make up a single poll */
 .title {
     margin:0;
     width:100%;
@@ -30,6 +70,12 @@ html,body {
     width:30%;
     float:left;
     background-color: #f5e9ff;
+}
+
+.pieWrapper {
+    height: 90%;
+    width: 70%;
+    display: inline-block;
 }
 
 .pieDiv {
@@ -56,16 +102,6 @@ html,body {
     background-color: #f5e9ff;
 }
 
-h1 {
-    margin:0;
-    text-align: center;
-}
-
-p {
-    width: 10%;
-    text-align: center;
-    margin: 0;
-}
 
 .optionsButton {
     display:block;
@@ -78,28 +114,26 @@ p {
     background-color: #ecc3ff
 }
 
+/* input form elements (when inputing a new poll) */
+
 .inputDiv {
-    position:absolute;
+    position: fixed;
     top: 0;
     display:flex;
     flex-direction:column;
     justify-content:center;
     z-index: 1;
-    height:100%;
+    height:100vh;
     width:100%;
     background-color: rgba(128,128,128,0.3);
 }
 
-.inputForm {
+.inputBox {
     margin-top:20%;
     background-color: white;
     display:block;
     margin:auto;
     width:30%;
-}
-input {
-    display:block;
-    margin:auto;
 }
 
 .choiceText {
@@ -117,25 +151,22 @@ input {
     justify-content:center;
 }
 
-button {
+
+.submitButton {
     background-color: 	#f5e9ff;
     border-color:#ecc3ff;
     outline:none;
 }
 
-button:hover{
-  background-color: #ecc3ff ;
+.submitButton:hover {
+    background-color: #ecc3ff
 }
 
-button:focus {
-    outline:none;
+.addCancelDiv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
-canvas {
-    width: 450px;
-    height: 225px;
-}
-
 
 
 
@@ -149,20 +180,20 @@ canvas {
 
 .loginDiv {
     display: flex;
-    width:30%;
+    width:40%;
     justify-content: space-evenly;
     align-items: center;
 }
 
 .headerInputsDiv {
     display: flex;
-    width:70%;
-    justify-content: flex-end;
+    width:60%;
+    justify-content: center;
 }
 
 .headerInput {
     height: 60%;
-    width: 25%;
+    width: 20%;
 }
 
 .headerHeading {
@@ -179,8 +210,32 @@ canvas {
         width: 100%;
     }
 
-    .inputForm {
+    .inputBox {
         width:  100%;
+        height: 50%;
+    }
+
+    .inputForm {
+        height: 90%;
+    }
+
+    .choiceWrap {
+        height: 80%;
+    }
+
+    .submitButtonDiv {
+        height: 10%;
+    }
+
+    .addCancelDiv {
+        height: 10%;
+    }
+
+    .choiceDiv {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100%;
     }
 
     .headerInputsDiv {
@@ -207,7 +262,24 @@ canvas {
         width: 100%;
     }
 
-    .inputForm {
+    .inputBox {
         width:  100%;
+    }
+
+    canvas {
+        width: auto;
+        height: auto
+    }
+
+    .chartStyle {
+        height: 15%;
+    }
+
+    .pieDiv {
+        height: 85%;
+    }
+
+    h1 {
+        font-size: 150%
     }
 }
